--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+
+
+  "engines": {
+    "node":"22.12.0"
+   },
+   
   "name": "marriage_project",
   "version": "1.0.0",
   "main": "index.js",
@@ -11,12 +17,22 @@
   "description": "",
   "dependencies": {
     "body-parser": "^1.20.3",
+    "cloudinary": "^2.5.1",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "joi": "^17.13.3",
     "method-override": "^3.0.0",
-    "mongoose": "^8.9.5"
+    "mongoose": "^8.9.5",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0"
   }
 }
